# agent-toolbox

./: .gitignore  AndroidManifest.xml  BUILD_ENV_ADAPTATION.md  README.md  build.gradle  gradle.properties  markdown-editor.html  proguard-rules.pro  project.properties
.github/workflows/: build.yml
.openclaw/tmp/: rewrite.py
assets/: system_prompt_template.json  test_client.html
assets/git/: README.txt
assets/python/: git_bridge.py
assets/python/include/: pyconfig.h
assets/python/stdlib/: _sysconfig_vars__android_aarch64-linux-android.json  build-details.json
assets/python/stdlib/config-3.14-aarch64-linux-android/: config.c
assets/python/stdlib/python3.14/: _sysconfigdata__android_aarch64-linux-android.py
assets/python/stdlib/python3.14/config-3.14-aarch64-linux-android/: Makefile  Setup.stdlib
assets/skills/ask-tool/: SKILL.md
assets/skills/git-skill/: SKILL.md
assets/skills/plan-todo/: SKILL.md
res/layout/: activity_deepseek.xml  activity_main.xml
res/values/: strings.xml
skills/references/: conventions.md
src/com/example/agenttoolbox/: DeepSeekActivity.java  DeepSeekChatBridge.java  JavaScriptBridge.java  MainActivity.java  McpForegroundService.java
src/com/example/agenttoolbox/gm/: LuaEngine.java  MemoryEngine.java  MemoryFreezer.java  ProcessManager.java  RootManager.java
src/com/example/agenttoolbox/mcp/: JsonRpcRequest.java  JsonRpcResponse.java  McpServer.java
src/main/c/: CMakeLists.txt  python_bridge.c
src/main/c/include/openssl/: configuration.h
tools/: Dockerfile  build_static_git.sh
(+56 files in other folders)
